--- a/src/main/resources/com/example/semesterprojektfebruar2024/sign-up.fxml
+++ b/src/main/resources/com/example/semesterprojektfebruar2024/sign-up.fxml
@@ -9,8 +9,8 @@
    <children>
       <Label layoutX="165.0" layoutY="115.0" prefHeight="18.0" prefWidth="63.0" text="Username" />
       <Label layoutX="165.0" layoutY="151.0" prefHeight="18.0" prefWidth="63.0" text="Password" />
-      <TextField fx:id="tf_username" layoutX="262.0" layoutY="112.0" />
-      <TextField fx:id="tf_password" layoutX="262.0" layoutY="147.0" />
+      <TextField fx:id="txt_username" layoutX="262.0" layoutY="112.0" />
+      <TextField fx:id="txt_password" layoutX="262.0" layoutY="147.0" />
       <Button fx:id="btn_signup" layoutX="285.0" layoutY="227.0" mnemonicParsing="false" text="Sign up" />
       <Button fx:id="btn_login" layoutX="285.0" layoutY="271.0" mnemonicParsing="false" text="Login" />
    </children>
