--- a/src/main/resources/com/example/semesterprojektfebruar2024/appointment.fxml
+++ b/src/main/resources/com/example/semesterprojektfebruar2024/appointment.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -14,14 +15,16 @@
             <Font size="35.0" />
          </font>
       </Text>
-      <DatePicker layoutX="308.0" layoutY="104.0" />
+      <DatePicker fx:id="datePicker" layoutX="308.0" layoutY="104.0" onAction="#date" />
       <Text layoutX="189.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a date" />
-      <ComboBox fx:id="dropdowntime" layoutX="308.0" layoutY="150.0" prefWidth="150.0" />
+      <ComboBox fx:id="dropdowntime" layoutX="308.0" layoutY="150.0" onAction="#time" prefWidth="150.0" />
       <ComboBox fx:id="dropdowntreatment" layoutX="308.0" layoutY="200.0" onAction="#treatment" prefWidth="150.0" />
       <Text layoutX="189.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a time" />
       <Text layoutX="174.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a treatment" />
       <ComboBox fx:id="dropdownemployee" layoutX="308.0" layoutY="252.0" onAction="#employee" prefWidth="150.0" />
       <Text layoutX="174.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose a employee" />
-      <Button fx:id="book" layoutX="483.0" layoutY="340.0" mnemonicParsing="false" text="Book" />
+      <Button layoutX="483.0" layoutY="340.0" mnemonicParsing="false" onAction="#onOpretBookClickIBook" text="Book" />
+      <Button layoutX="81.0" layoutY="328.0" mnemonicParsing="false" onAction="#backButtonLoggedIn" text="Back" />
+      <Label fx:id="appointmentCreated" layoutX="355.0" layoutY="349.0" prefHeight="0.0" prefWidth="0.0" text="Label" />
    </children>
 </AnchorPane>
